# awesome-production-mlops

./: .env.example  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
docs/: BEST_PRACTICES.md  DEVELOPMENT.md  LESSONS_LEARNED.md  QUICK_START.md
examples/llmops/: rag_example.py
examples/mlops/: complete_pipeline.py
examples/ui/: gradio_demo.py  streamlit_app.py
src/mlops/: __init__.py  core.py  monitoring.py  serving.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_core.py  test_monitoring.py  test_serving.py
