[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-ecosystem"
version = "1.0.0"
description = "🚀 Complete MLOps Toolkit - Production-Ready ML Systems with 2024-2025 Best Practices"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = [
    "mlops",
    "machine-learning",
    "llmops",
    "genai",
    "ml-engineering",
    "data-science",
    "production-ml",
    "mlflow",
    "langchain",
    "vector-database",
]
authors = [
    { name = "Umit Kacar", email = "umitkacar@example.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
# Deep Learning Frameworks
dl = [
    "torch>=2.0.0",
    "tensorflow>=2.13.0",
]

# LLMOps & GenAI
llmops = [
    "langchain>=0.1.0",
    "llama-index>=0.9.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
]

# Vector Databases
vector = [
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "pymilvus>=2.3.0",
    "weaviate-client>=3.25.0",
]

# Experiment Tracking
tracking = [
    "mlflow>=2.9.0",
    "wandb>=0.16.0",
    "neptune>=1.8.0",
]

# Data Quality & Validation
quality = [
    "great-expectations>=0.18.0",
    "evidently>=0.4.0",
    "deepchecks>=0.17.0",
]

# Model Serving
serving = [
    "bentoml>=1.1.0",
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
]

# Workflow Orchestration
orchestration = [
    "prefect>=2.14.0",
]

# AutoML & Optimization
automl = [
    "autogluon>=0.8.0",
    "optuna>=3.5.0",
    "pycaret>=3.2.0",
]

# Feature Store
features = [
    "feast>=0.35.0",
]

# UI Frameworks
ui = [
    "gradio>=4.10.0",
    "streamlit>=1.29.0",
]

# Model Optimization
optimization = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
]

# Security & Governance
security = [
    "shap>=0.44.0",
]

# Utilities
utils = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

# Visualization
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "Pillow>=10.1.0",
]

# Development Tools
dev = [
    "hatch>=1.9.0",
    "pre-commit>=3.6.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "coverage[toml]>=7.4.0",
    "uv>=0.1.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# All dependencies
all = [
    "mlops-ecosystem[dl,llmops,vector,tracking,quality,serving,orchestration,automl,features,ui,optimization,security,utils,viz]",
]

# Complete development environment
complete = [
    "mlops-ecosystem[all,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/MLOps"
Documentation = "https://github.com/umitkacar/MLOps/blob/main/README.md"
Repository = "https://github.com/umitkacar/MLOps"
"Bug Tracker" = "https://github.com/umitkacar/MLOps/issues"

# ============================================================================
# Hatch Configuration
# ============================================================================

[tool.hatch.version]
path = "src/mlops/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/.gitignore",
    "/.pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlops"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/mlops --cov-report=html --cov-report=term {args:tests}"
test-parallel = "pytest -n auto {args:tests}"
test-parallel-cov = "pytest -n auto --cov=src/mlops --cov-report=html --cov-report=term {args:tests}"
cov-report = "coverage report"
cov-html = "coverage html && python -m http.server -d htmlcov"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/mlops tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

# ============================================================================
# Ruff Configuration (Fast Python Linter)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "TRY",    # tryceratops
    "FBT",    # flake8-boolean-trap
    "N",      # pep8-naming
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "T20",    # flake8-print
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "ANN401", # Dynamically typed expressions (Any)
    "TRY003", # Avoid specifying long messages outside exception class
    "PLR0913", # Too many arguments
    "S101",   # Use of assert detected (needed for pytest)
    "N803",   # Argument name should be lowercase (ML convention: X, y)
    "N806",   # Variable name should be lowercase (ML convention: X, y)
    "ARG002", # Unused method argument (sometimes needed for API compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
    "D",      # Don't require docstrings in tests
    "ANN",    # Don't require type annotations in tests
    "PLR2004", # Magic value comparisons
]
"examples/**/*.py" = [
    "T20",    # Allow print in examples
    "D",      # Don't require docstrings in examples
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mlops"]

[tool.ruff.lint.mccabe]
max-complexity = 10

# ============================================================================
# Black Configuration (Code Formatter)
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "pandas.*",
    "numpy.*",
    "mlflow.*",
    "wandb.*",
    "neptune.*",
    "prefect.*",
    "langchain.*",
    "llama_index.*",
    "qdrant_client.*",
    "chromadb.*",
    "gradio.*",
    "streamlit.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=src/mlops",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "llm: marks tests that require LLM API access",
    "docker: marks tests that require Docker",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
    "*/__init__.py",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# Additional Tool Configurations
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Skip assert warnings in tests

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["mlops"]
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
